update mmdetection dockerfile

--- a/mmdet/docker/Dockerfile
+++ b/mmdet/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM nvidia/cuda:10.2-base-ubuntu18.04
 
 # Install some basic utilities
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends\
     curl \
     ca-certificates \
     sudo \
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     libx11-6 \
     g++ \
     ffmpeg \
+    vim \
     libsm6 \
     libxext6 \
     git \
@@ -18,39 +19,40 @@ RUN apt-get update && apt-get install -y \
     libsm6 \
     libxrender-dev \
     libxext6 \
+    dirmngr \
+    gpg  \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
+
+RUN gpg --keyserver keyserver.ubuntu.com --recv-key B42F6819007F00F88E364FD4036A9C25BF357DD4
+RUN curl -o /usr/local/bin/gosu -SL "https://github.com/tianon/gosu/releases/download/1.4/gosu-$(dpkg --print-architecture)" \
+    && curl -o /usr/local/bin/gosu.asc -SL "https://github.com/tianon/gosu/releases/download/1.4/gosu-$(dpkg --print-architecture).asc" \
+    && gpg --verify /usr/local/bin/gosu.asc \
+    && rm /usr/local/bin/gosu.asc \
+    && chmod +x /usr/local/bin/gosu
 
 # Create a working directory
 RUN mkdir /app
 WORKDIR /app
 
-# Create a non-root user and switch to it
-RUN adduser --disabled-password --gecos '' --shell /bin/bash user \
- && chown -R user:user /app
-RUN echo "user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-user
-USER user
-
-# All users can use /home/user as their home directory
-ENV HOME=/home/user
-RUN chmod 777 /home/user
-
 # Install Miniconda and Python 3.8
 ENV CONDA_AUTO_UPDATE_CONDA=false
-ENV PATH=/home/user/miniconda/bin:$PATH
-RUN curl -sLo ~/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-py38_4.8.3-Linux-x86_64.sh \
- && chmod +x ~/miniconda.sh \
- && ~/miniconda.sh -b -p ~/miniconda \
- && rm ~/miniconda.sh \
+ENV PATH=/opt/miniconda/bin:$PATH
+RUN curl -o /opt/miniconda.sh -SL https://repo.continuum.io/miniconda/Miniconda3-py38_4.8.3-Linux-x86_64.sh \
+ && chmod +x /opt/miniconda.sh \
+ && /opt/miniconda.sh -b -p /opt/miniconda \
+ && rm /opt/miniconda.sh \
  && conda install -y python==3.8.3 \
  && conda clean -ya
 
+RUN conda install -y python==3.8.3 \
+ && conda clean -ya
+
 # CUDA 10.2-specific steps
-# Install pytorch==1.6 and torchvision==0.7.0
+# Install pytorch==1.6.0 and torchvision==0.7.0
 RUN conda install -y -c conda-forge cudatoolkit=10.2 \
  && conda install -y -c pytorch pytorch==1.6.0 torchvision==0.7.0\
  && conda clean -ya
-
 
 # # Use TUNA pip sources
 # COPY pip.conf /etc/pip.conf
@@ -59,7 +61,7 @@ RUN conda install -y -c conda-forge cudatoolkit=10.2 \
 # Install MMDetection #
 #######################
 
-# Install MMCV CUDA-10.2 PyTorch-1.6.0
+# # Install MMCV CUDA-10.2 PyTorch-1.6.0
 RUN pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu102/torch1.6.0/index.html
 
 # Clone the MMDetection repository
@@ -72,24 +74,18 @@ RUN pip install -r requirements/build.txt
 RUN pip install -v -e .
 # RUN python setup.py develop
 
+# Install Python Package
+RUN conda install -y pandas numpy jupyter notebook
+
 WORKDIR /app
 
-# Install jupyter 
+COPY ./docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod a+x /usr/local/bin/docker-entrypoint.sh
 
-RUN pip install jupyter
-RUN pip install jupyter_contrib_nbextensions && jupyter contrib nbextension install --user
+COPY ./docker-jupyter.sh /usr/local/bin/docker-jupyter.sh
+RUN chmod a+x /usr/local/bin/docker-jupyter.sh
 
-# jupyter config
-# default password: notebook
-# default path: /app
-ARG pwd=sha1:8e41296bc947:602f563ad9c8a07d7aa5bda3e27ed8136aa39696
-RUN jupyter notebook --generate-config
-RUN echo "c.NotebookApp.ip = '*'" >> /home/user/.jupyter/jupyter_notebook_config.py \
- && echo "c.NotebookApp.open_browser = False" >> /home/user/.jupyter/jupyter_notebook_config.py \
- && echo "c.NotebookApp.password = u'${pwd}'" >> /home/user/.jupyter/jupyter_notebook_config.py \
- && echo "c.NotebookApp.port = 8888" >> /home/user/.jupyter/jupyter_notebook_config.py \
- && echo "c.NotebookApp.allow_root = True" >> /home/user/.jupyter/jupyter_notebook_config.py \
- && echo "c.ContentsManager.root_dir = '/app'" >> /home/user/.jupyter/jupyter_notebook_config.py
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 # Set the default command 
-CMD ["jupyter","notebook"]
+CMD ["/usr/local/bin/docker-jupyter.sh"]
